# SDN_AI_GP

./: .gitignore  README.md  iot_relay_pcap.py  iot_replay_packet_out.py  pyproject.toml
ARP_LSTM/: README.md
ARP_LSTM/configs/: config.yaml  fast.yaml
ARP_LSTM/models/: feature_scaler.joblib  supervised.pt
ARP_LSTM/scripts/: infer_one  score_pcaps.py  train_supervised.py
ARP_LSTM/tests/: test_conflict_detection.py  test_feature_extraction.py  test_labeling.py  test_seed.py
ARP_Spoofing/results/: flagged_macs.csv  flagged_macs.json
ARP_Spoofing/src/: live_detect.py  live_detect_cnn.py
MMLE/: requirements.txt  setup_ryu_env.sh
Neural_LSTM/: README.md
Neural_LSTM/configs/: config.yaml  fast.yaml
Neural_LSTM/data/: attack_intervals.csv  file_labels.csv
Neural_LSTM/models/: ae_scaler.joblib  autoencoder.pt  feature_scaler.joblib  fusion_calibrator.joblib  supervised.pt
Neural_LSTM/scripts/: infer_one  score_pcaps.py  train_supervised.py
Neural_LSTM/tests/: conftest.py  test_feature_extraction.py  test_inference_activity.py  test_labeling.py  test_seed.py  test_training_pipeline.py
arpdet/: README.md  config.yaml  decision.py  explain.py  infer.py  train.py
arpdet/artifacts/: calibration.json  feature_model_meta.json  model_best.pt  pca_components.npy  pca_mean.npy  pca_var.npy  scaler.pkl  static_slimmer_meta.json
arpdet/data/: __init__.py  dataset.py  packet_to_frame.py  pcap_reader.py  preprocess.py  windowizer.py
arpdet/features/: feature_slimming.py  seq_features.py  static_features.py
arpdet/models/: dws_cnn.py
arpdet/quick_reports_attack/: pure_attack.json
arpdet/tests/: test_decision.py  test_seq_features.py  test_static_features.py  test_windowing.py
autoencoder/: README.md  config.yaml  pyproject.toml
autoencoder/data/artifacts/: clip_bounds.json  error_stats.json  feature_list.json  model.pt  model_config.json  scaler.pkl  source_stats.json  threshold.json  train_metrics.csv
autoencoder/scripts/: extract_pcaps.py  infer_file.py  infer_live.py  train_autoencoder.py
autoencoder/src/dae/: cli.py  config.py  extract.py  features.py  infer.py  logging.py  model.py  preprocess.py  threshold.py  train.py  utils_io.py  window.py
autoencoder/src/dae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autoencoder/tests/: test_features.py  test_preprocess.py  test_threshold.py  test_window.py
configs/: config.yaml
data/: attack_intervals.csv
dosdet/: .gitignore  Makefile  README.md  config.yaml  config.yaml.bak  decision.py  eval.py  eval_fast.py  explain.py  gate_debug.py  infer.py  lgb_baseline.py  requirements.txt  train.py  train_fast.py
dosdet/artifacts_fast/: calibration.json  feature_model_meta.json  feature_schema.json  model_best.pt  pca_components.npy  pca_mean.npy  pca_var.npy  scaler.pkl  static_slimmer_meta.json
dosdet/cache/: lgbm_importances.json  manifest.json
dosdet/data/: dataset.py  io_utils.py  packet_to_frame.py  pcap_reader.py  preprocess.py
dosdet/features/: l2_hints.py  scaler.py  (+3 more)
extraction_of_features/: profile_model.py  profile_targets.py
gateway/: moe_gate.pt  moe_model.py  train_moe.py
iot_relay_txt_file/: iot_replay.py  iot_replay_IpARP_spoof.py  iot_replay_arp_spoof.py  iot_replay_dos.py  iot_replay_ip_spoof.py
mininet_trial/: attackers_inventory.py  devices_inventory.py  iot_hostmap.json  iot_replay_switch.py  minitopo_iot.py  pcap2hostmap_enriched.py
pcap/: iot_relay_pcap.py
pcaps/: example_normal.pcap  example_ssdp_attack.pcap
tests/: test_feature_extraction.py  test_labeling.py  test_seed.py  test_training_pipeline.py
(+121 files in other folders)
