[project]
name = "dos-detector"
version = "0.1.0"
description = "PCAP-based DoS detector using sequence models"
authors = [
    { name = "SDN AI GP", email = "maintainer@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "torch>=2.0",
    "typer[all]>=0.9",
    "pyyaml>=6.0",
    "structlog>=23.1",
    "tqdm>=4.65",
    "joblib>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "shap>=0.41",
    "scapy>=2.5",
    "pyshark>=0.6",
    "pyarrow>=12.0"
]

[project.optional-dependencies]
deV = [
    "black>=23.0",
    "ruff>=0.1.5",
    "pytest>=7.3",
    "pytest-cov>=4.0"
]

[project.scripts]
dos-detector = "dos_detector.cli:app"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "N", "ANN", "C4", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests"
]
addopts = "-ra"
