[project]
name = "arp-detector"
version = "0.1.0"
description = "PCAP-based ARP spoofing detector using sequence models"
authors = [
    { name = "Omar Awad", email = "Omar.t.awad@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "typer[all]>=0.9",
    "pyyaml>=6.0.1",
    "structlog>=23.1",
    "tqdm>=4.66",
    "joblib>=1.2",
    "matplotlib>=3.8",
    "seaborn>=0.12",
    "shap>=0.41",
    "scapy>=2.5.0",
    "pyshark>=0.6",
    "pyarrow>=16.0.0",
    "python-dateutil>=2.9"
]

[project.optional-dependencies]
deV = [
    "black>=23.0",
    "ruff>=0.1.5",
    "pytest>=7.3",
    "pytest-cov>=4.0"
]

[project.scripts]
arp-detector = "arp_detector.cli:app"

[tool.setuptools]
package-dir = {"" = "ARP_LSTM/src"}
packages = ["arp_detector"]
include-package-data = true

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "N", "ANN", "C4", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests"
]
addopts = "-ra"
